--- a/templates/predict.html
+++ b/templates/predict.html
@@ -63,6 +63,7 @@
             name="amount"
             required
             min="0"
+            max="100000"
           />
           <input type="date" id="date" name="date" required />
           <input type="time" id="time" name="time" required />
