--- a/templates/result.html
+++ b/templates/result.html
@@ -68,7 +68,7 @@
     <script>
       Swal.fire({
         title: "Thank You",
-        text: "A Mail has been set th your Verified Google Email Address...",
+        text: "A Mail has been sent to your Verified Google Email Address...",
         icon: "success",
       });
     </script>
