--- a/templates/index.html
+++ b/templates/index.html
@@ -39,12 +39,10 @@
       </div>
       <div class="des">
         <h1>
-          AI Fortifies UPI: Fraud Vanquished, Transactions Secured. Your Digital
-          Confidence Elevated, Always...
+     FraudDetect360: Unveiling the AI and ML Arsenal in UPI Security Warfare
         </h1>
         <p>
-          Unparalleled Security: Our AI-driven UPI Fraud Detection - Where
-          Innovation Safeguards Every Transaction with Precision and Trust.
+          Embark on a voyage into the realm of UPI security, where dynamic defenses shield transactions from emerging threats and vulnerabilities
         </p>
       </div>
       <center>
