--- a/templates/home.html
+++ b/templates/home.html
@@ -35,13 +35,10 @@
       </div>
       <div class="des">
         <h1>
-          AI Driven Security Guarding Transactions and Upholding Your Financial
-          Trust
+         Experience the future of secure UPI transactions with our defender. Predicting fraud so you can swipe with confidence
         </h1>
         <p>
-          AI-Powered UPI Security: Fraud Thwarted, Transactions Fortified, Your
-          Digital Confidence Elevated - Seamless, Strong, and Always
-          Trustworthy..
+          Stay ahead of fraudsters with our UPI guardian – ensuring every transaction is a secure step forward
         </p>
       </div>
     </div>
